post and comments api doc get
