# app/ApiDoc/Post/Schemas/PostCommentAttributes.php
@@ -6,6 +6,7 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Schema(
+ *     schema="PostCommentAttributes",
  *     type="object",
  *     @OA\Property(
  *         property="id",
@@ -13,27 +14,22 @@ use OpenApi\Annotations as OA;
  *         example="6bb7c993-88ad-402c-9352-c7eb65d9b8e9"
  *     ),
  *     @OA\Property(
- *         property="title",
- *         type="string",
- *         example="Dogme post example"
- *     ),
- *     @OA\Property(
- *         property="slug",
- *         type="string",
- *         example="application test-post-example"
- *     ),
- *     @OA\Property(
  *         property="content",
  *         type="string",
  *         example="the content application test post example"
  *     ),
  *     @OA\Property(
- *         property="published_at",
+ *         property="createdAt",
+ *         type="date",
+ *         example="2025-03-02T13:25:39.000000Z"
+ *     ),
+ *     @OA\Property(
+ *         property="updatedAt",
  *         type="date",
  *         example="2025-03-02T13:25:39.000000Z"
  *     ),
  * )
  */
-class PostAttributes
+class PostCommentAttributes
 {
 }
